--- a/src/assets/scss/_site-base.scss
+++ b/src/assets/scss/_site-base.scss
@@ -103,7 +103,8 @@ h6 {
 }
 
 .site-section {
-  padding: 2.5em 0;
+  padding-top: 2.5em;
+  padding-bottom: 2.5em;
   @include media-breakpoint-up(md) {
     padding: 5em 0;
   }
